--- a/ConsoleApplication4.vcxproj
+++ b/ConsoleApplication4.vcxproj
@@ -168,7 +168,9 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GatlingGun.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="Octree.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Physical.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Skill.h" />
@@ -179,6 +181,7 @@
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Vector3D.h" />
+    <ClInclude Include="Vector4D.h" />
     <ClInclude Include="WorldMapGameState.h" />
   </ItemGroup>
   <ItemGroup>
@@ -202,7 +205,9 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GatlingGun.cpp" />
+    <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Octree.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Physical.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Skill.cpp" />
@@ -217,6 +222,7 @@
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Vector3D.cpp" />
+    <ClCompile Include="Vector4D.cpp" />
     <ClCompile Include="WorldMapGameState.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
